# aqua

./: .clang-format  .gitignore  LICENSE  README.md  aqua.h  aquaexec.c  aquarepl.c  meson.build  repl.c
docs/: vm.md
src/: aqua.c  compiler.c  compiler.h  dump.c  dump.h  gc.c  gc.h  helpers.h  object.c  object.h  ops.h  state.c  state.h  types.h  vm.c  vm.h
